src/main/java/gov/nist/csd/pm/policy/pml/antlr/PMLParser.java
// Generated from PML.g4 by ANTLR 4.8
package gov.nist.csd.pm.policy.pml.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, DELETE=2, BREAK=3, CONTINUE=4, POLICY_ELEMENT=5, RULE=6, WHEN=7, 
		PERFORMS=8, AS=9, ON=10, DO=11, ANY_USER=12, USERS=13, ANY_USER_WITH_ATTRIBUTE=14, 
		PROCESS=15, INTERSECTION=16, UNION=17, SET_RESOURCE_ACCESS_RIGHTS=18, 
		ASSIGN=19, DEASSIGN=20, FROM=21, SET_PROPERTIES=22, OF=23, TO=24, ASSOCIATE=25, 
		AND=26, WITH=27, DISSOCIATE=28, DENY=29, PROHIBITION=30, OBLIGATION=31, 
		ACCESS_RIGHTS=32, POLICY_CLASS=33, OBJECT_ATTRIBUTE=34, USER_ATTRIBUTE=35, 
		OBJECT=36, USER=37, ATTR=38, ANY=39, LET=40, CONST=41, FUNCTION=42, RETURN=43, 
		BOOLEAN=44, TRUE=45, FALSE=46, STRING_TYPE=47, BOOLEAN_TYPE=48, VOID_TYPE=49, 
		ARRAY_TYPE=50, MAP_TYPE=51, FOREACH=52, FOR=53, IN=54, IF=55, ELSE=56, 
		IN_RANGE=57, NUMBER=58, ID=59, STRING=60, DOUBLE_QUOTE_STRING=61, SINGLE_QUOTE_STRING=62, 
		LINE_COMMENT=63, WS=64, COMMA=65, COLON=66, OPEN_CURLY=67, CLOSE_CURLY=68, 
		OPEN_BRACKET=69, CLOSE_BRACKET=70, OPEN_ANGLE_BRACKET=71, CLOSE_ANGLE_BRACKET=72, 
		OPEN_PAREN=73, CLOSE_PAREN=74, IS_COMPLEMENT=75, EQUALS=76, AND_OP=77, 
		OR_OP=78, EQUALS_OP=79, NOT_EQUALS_OP=80;
	public static final int
		RULE_pml = 0, RULE_statement = 1, RULE_createPolicyStatement = 2, RULE_createAttributeStatement = 3, 
		RULE_createUserOrObjectStatement = 4, RULE_createObligationStatement = 5, 
		RULE_createRuleStatement = 6, RULE_subjectClause = 7, RULE_onClause = 8, 
		RULE_anyPe = 9, RULE_response = 10, RULE_responseBlock = 11, RULE_responseStatement = 12, 
		RULE_createProhibitionStatement = 13, RULE_prohibitionContainerList = 14, 
		RULE_prohibitionContainerExpression = 15, RULE_setNodePropertiesStatement = 16, 
		RULE_assignStatement = 17, RULE_deassignStatement = 18, RULE_associateStatement = 19, 
		RULE_dissociateStatement = 20, RULE_setResourceAccessRightsStatement = 21, 
		RULE_deleteStatement = 22, RULE_deleteType = 23, RULE_nodeType = 24, RULE_deleteRuleStatement = 25, 
		RULE_variableDeclarationStatement = 26, RULE_functionDefinitionStatement = 27, 
		RULE_formalArgList = 28, RULE_formalArg = 29, RULE_formalArgType = 30, 
		RULE_functionReturnStatement = 31, RULE_funcReturnType = 32, RULE_funcBody = 33, 
		RULE_foreachStatement = 34, RULE_forRangeStatement = 35, RULE_breakStatement = 36, 
		RULE_continueStatement = 37, RULE_functionInvokeStatement = 38, RULE_ifStatement = 39, 
		RULE_elseIfStatement = 40, RULE_elseStatement = 41, RULE_variableType = 42, 
		RULE_mapType = 43, RULE_arrayType = 44, RULE_statementBlock = 45, RULE_expression = 46, 
		RULE_array = 47, RULE_map = 48, RULE_mapEntry = 49, RULE_entryReference = 50, 
		RULE_literal = 51, RULE_variableReference = 52, RULE_functionInvoke = 53, 
		RULE_functionInvokeArgs = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"pml", "statement", "createPolicyStatement", "createAttributeStatement", 
			"createUserOrObjectStatement", "createObligationStatement", "createRuleStatement", 
			"subjectClause", "onClause", "anyPe", "response", "responseBlock", "responseStatement", 
			"createProhibitionStatement", "prohibitionContainerList", "prohibitionContainerExpression", 
			"setNodePropertiesStatement", "assignStatement", "deassignStatement", 
			"associateStatement", "dissociateStatement", "setResourceAccessRightsStatement", 
			"deleteStatement", "deleteType", "nodeType", "deleteRuleStatement", "variableDeclarationStatement", 
			"functionDefinitionStatement", "formalArgList", "formalArg", "formalArgType", 
			"functionReturnStatement", "funcReturnType", "funcBody", "foreachStatement", 
			"forRangeStatement", "breakStatement", "continueStatement", "functionInvokeStatement", 
			"ifStatement", "elseIfStatement", "elseStatement", "variableType", "mapType", 
			"arrayType", "statementBlock", "expression", "array", "map", "mapEntry", 
			"entryReference", "literal", "variableReference", "functionInvoke", "functionInvokeArgs"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "','", "':'", "'{'", "'}'", "'['", "']'", 
			"'<'", "'>'", "'('", "')'", "'!'", "'='", "'&&'", "'||'", "'=='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CREATE", "DELETE", "BREAK", "CONTINUE", "POLICY_ELEMENT", "RULE", 
			"WHEN", "PERFORMS", "AS", "ON", "DO", "ANY_USER", "USERS", "ANY_USER_WITH_ATTRIBUTE", 
			"PROCESS", "INTERSECTION", "UNION", "SET_RESOURCE_ACCESS_RIGHTS", "ASSIGN", 
			"DEASSIGN", "FROM", "SET_PROPERTIES", "OF", "TO", "ASSOCIATE", "AND", 
			"WITH", "DISSOCIATE", "DENY", "PROHIBITION", "OBLIGATION", "ACCESS_RIGHTS", 
			"POLICY_CLASS", "OBJECT_ATTRIBUTE", "USER_ATTRIBUTE", "OBJECT", "USER", 
			"ATTR", "ANY", "LET", "CONST", "FUNCTION", "RETURN", "BOOLEAN", "TRUE", 
			"FALSE", "STRING_TYPE", "BOOLEAN_TYPE", "VOID_TYPE", "ARRAY_TYPE", "MAP_TYPE", 
			"FOREACH", "FOR", "IN", "IF", "ELSE", "IN_RANGE", "NUMBER", "ID", "STRING", 
			"DOUBLE_QUOTE_STRING", "SINGLE_QUOTE_STRING", "LINE_COMMENT", "WS", "COMMA", 
			"COLON", "OPEN_CURLY", "CLOSE_CURLY", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"OPEN_ANGLE_BRACKET", "CLOSE_ANGLE_BRACKET", "OPEN_PAREN", "CLOSE_PAREN", 
			"IS_COMPLEMENT", "EQUALS", "AND_OP", "OR_OP", "EQUALS_OP", "NOT_EQUALS_OP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PML.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PmlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PMLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public PmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).enterPml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).exitPml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLVisitor ) return ((PMLVisitor<? extends T>)visitor).visitPml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PmlContext pml() throws RecognitionException {
		PmlContext _localctx = new PmlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pml);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << DELETE) | (1L << BREAK) | (1L << CONTINUE) | (1L << SET_RESOURCE_ACCESS_RIGHTS) | (1L << ASSIGN) | (1L << DEASSIGN) | (1L << SET_PROPERTIES) | (1L << ASSOCIATE) | (1L << DISSOCIATE) | (1L << LET) | (1L << CONST) | (1L << FUNCTION) | (1L << RETURN) | (1L << FOREACH) | (1L << FOR) | (1L << IF) | (1L << ID))) != 0)) {
				{
				{
				setState(110);
				statement();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public CreatePolicyStatementContext createPolicyStatement() {
			return getRuleContext(CreatePolicyStatementContext.class,0);
		}
		public CreateAttributeStatementContext createAttributeStatement() {
			return getRuleContext(CreateAttributeStatementContext.class,0);
		}
		public CreateUserOrObjectStatementContext createUserOrObjectStatement() {
			return getRuleContext(CreateUserOrObjectStatementContext.class,0);
		}
		public CreateObligationStatementContext createObligationStatement() {
			return getRuleContext(CreateObligationStatementContext.class,0);
		}
		public CreateProhibitionStatementContext createProhibitionStatement() {
			return getRuleContext(CreateProhibitionStatementContext.class,0);
		}
		public SetNodePropertiesStatementContext setNodePropertiesStatement() {
			return getRuleContext(SetNodePropertiesStatementContext.class,0);
		}
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public DeassignStatementContext deassignStatement() {
			return getRuleContext(DeassignStatementContext.class,0);
		}
		public AssociateStatementContext associateStatement() {
			return getRuleContext(AssociateStatementContext.class,0);
		}
		public DissociateStatementContext dissociateStatement() {
			return getRuleContext(DissociateStatementContext.class,0);
		}
		public SetResourceAccessRightsStatementContext setResourceAccessRightsStatement() {
			return getRuleContext(SetResourceAccessRightsStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public DeleteRuleStatementContext deleteRuleStatement() {
			return getRuleContext(DeleteRuleStatementContext.class,0);
		}
		public VariableDeclarationStatementContext variableDeclarationStatement() {
			return getRuleContext(VariableDeclarationStatementContext.class,0);
		}
		public FunctionDefinitionStatementContext functionDefinitionStatement() {
			return getRuleContext(FunctionDefinitionStatementContext.class,0);
		}
		public FunctionReturnStatementContext functionReturnStatement() {
			return getRuleContext(FunctionReturnStatementContext.class,0);
		}
		public ForeachStatementContext foreachStatement() {
			return getRuleContext(ForeachStatementContext.class,0);
		}
		public ForRangeStatementContext forRangeStatement() {
			return getRuleContext(ForRangeStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public FunctionInvokeStatementContext functionInvokeStatement() {
			return getRuleContext(FunctionInvokeStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLVisitor ) return ((PMLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(118);
				createPolicyStatement();
				}
				break;
			case 2:
				{
				setState(119);
				createAttributeStatement();
				}
				break;
			case 3:
				{
				setState(120);
				createUserOrObjectStatement();
				}
				break;
			case 4:
				{
				setState(121);
				createObligationStatement();
				}
				break;
			case 5:
				{
				setState(122);
				createProhibitionStatement();
				}
				break;
			case 6:
				{
				setState(123);
				setNodePropertiesStatement();
				}
				break;
			case 7:
				{
				setState(124);
				assignStatement();
				}
				break;
			case 8:
				{
				setState(125);
				deassignStatement();
				}
				break;
			case 9:
				{
				setState(126);
				associateStatement();
				}
				break;
			case 10:
				{
				setState(127);
				dissociateStatement();
				}
				break;
			case 11:
				{
				setState(128);
				setResourceAccessRightsStatement();
				}
				break;
			case 12:
				{
				setState(129);
				deleteStatement();
				}
				break;
			case 13:
				{
				setState(130);
				deleteRuleStatement();
				}
				break;
			case 14:
				{
				setState(131);
				variableDeclarationStatement();
				}
				break;
			case 15:
				{
				setState(132);
				functionDefinitionStatement();
				}
				break;
			case 16:
				{
				setState(133);
				functionReturnStatement();
				}
				break;
			case 17:
				{
				setState(134);
				foreachStatement();
				}
				break;
			case 18:
				{
				setState(135);
				forRangeStatement();
				}
				break;
			case 19:
				{
				setState(136);
				breakStatement();
				}
				break;
			case 20:
				{
				setState(137);
				continueStatement();
				}
				break;
			case 21:
				{
				setState(138);
				functionInvokeStatement();
				}
				break;
			case 22:
				{
				setState(139);
				ifStatement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreatePolicyStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(PMLParser.CREATE, 0); }
		public TerminalNode POLICY_CLASS() { return getToken(PMLParser.POLICY_CLASS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CreatePolicyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createPolicyStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).enterCreatePolicyStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).exitCreatePolicyStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLVisitor ) return ((PMLVisitor<? extends T>)visitor).visitCreatePolicyStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreatePolicyStatementContext createPolicyStatement() throws RecognitionException {
		CreatePolicyStatementContext _localctx = new CreatePolicyStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createPolicyStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(CREATE);
			setState(143);
			match(POLICY_CLASS);
			setState(144);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateAttributeStatementContext extends ParserRuleContext {
		public ExpressionContext name;
		public ExpressionContext parents;
		public TerminalNode CREATE() { return getToken(PMLParser.CREATE, 0); }
		public TerminalNode IN() { return getToken(PMLParser.IN, 0); }
		public TerminalNode OBJECT_ATTRIBUTE() { return getToken(PMLParser.OBJECT_ATTRIBUTE, 0); }
		public TerminalNode USER_ATTRIBUTE() { return getToken(PMLParser.USER_ATTRIBUTE, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public CreateAttributeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createAttributeStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).enterCreateAttributeStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).exitCreateAttributeStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLVisitor ) return ((PMLVisitor<? extends T>)visitor).visitCreateAttributeStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateAttributeStatementContext createAttributeStatement() throws RecognitionException {
		CreateAttributeStatementContext _localctx = new CreateAttributeStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createAttributeStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(CREATE);
			setState(147);
			_la = _input.LA(1);
			if ( !(_la==OBJECT_ATTRIBUTE || _la==USER_ATTRIBUTE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(148);
			((CreateAttributeStatementContext)_localctx).name = expression(0);
			setState(149);
			match(IN);
			setState(150);
			((CreateAttributeStatementContext)_localctx).parents = expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateUserOrObjectStatementContext extends ParserRuleContext {
		public ExpressionContext name;
		public ExpressionContext parents;
		public TerminalNode CREATE() { return getToken(PMLParser.CREATE, 0); }
		public TerminalNode IN() { return getToken(PMLParser.IN, 0); }
		public TerminalNode USER() { return getToken(PMLParser.USER, 0); }
		public TerminalNode OBJECT() { return getToken(PMLParser.OBJECT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public CreateUserOrObjectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createUserOrObjectStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).enterCreateUserOrObjectStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLListener ) ((PMLListener)listener).exitCreateUserOrObjectStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLVisitor ) return ((PMLVisitor<? extends T>)visitor).visitCreateUserOrObjectStatement(this);
			else return visitor.visitChildren(this);
		}
	}
